e.target /e.target.nodeName

--- a/11.第85 ~ 100章練習/index.html
+++ b/11.第85 ~ 100章練習/index.html
@@ -58,6 +58,14 @@
       <div class="box7">
         <a>連結到</a>
       </div>
+      <div class="box8">
+        <p>e.target / e.target.nodeName</p>
+        <ul>
+          <li><a href="##">我是連結</a></li>
+        </ul>
+        <p>e.target可到console.log看</p>
+        <p>e.target.nodeName:"<span></span>"</p>
+      </div>
     </div>
     <script src="./all.js"></script>
   </body>
@@ -125,5 +133,10 @@
     background: pink;
     display: inline-block;
     vertical-align: middle;
+  }
+  .box8 ul {
+    width: 200px;
+    height: 100px;
+    border: 2px solid blue;
   }
 </style>
