--- a/12.第94章練習/index.html
+++ b/12.第94章練習/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <img src="./img/rocket.png" class="rocket r1" />
-    <img src="./img/rocket.png" class="rocket r2" />
-    <img src="./img/rocket.png" class="rocket r3" />
-  </body>
-</html>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Document</title>
+</head>
+
+<body>
+  <img src="./img/rocket.png" class="rocket r1">
+  <img src="./img/rocket.png" class="rocket r2">
+  <img src="./img/rocket.png" class="rocket r3">
+</body>
+
+</html>
 <script>
   const el = document.body;
   el.addEventListener("keydown", good, false);
