--- a/12.第94章練習/index.html
+++ b/12.第94章練習/index.html
@@ -17,9 +17,9 @@
 
 </html>
 <script>
-  const el = document.body;
-  el.addEventListener("keydown", good, false);
-  function good(e) {
+  const all = document.body;
+  all.addEventListener("keydown", soGood, false);
+  function soGood(e) {
     console.log(e.keyCode);
     switch (e.keyCode) {
       case 65:
