--- a/14.第99章練習/index.html
+++ b/14.第99章練習/index.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>document</title>
 </head>
 
 <body>
-    <div class="box"></div>
+    <div class="box1">
+    </div>
 </body>
 
 </html>
 <script>
-    const box = document.querySelector(".box");
-    box.addEventListener("mousemove", boxStyle, false);
-    function boxStyle() {
-        alert("hi");
+    const box = document.querySelector(".box1");
+    box.addEventListener("mouseover", mouseover, false);
+    function mouseover() {
+        alert("mouseover")
+    }
+    const box2 = document.querySelector(".box1");
+    box2.addEventListener("mouseout", mouseout, false);
+    function mouseout() {
+        alert("mouseout")
     }
 </script>
