update css layout

--- a/15.第97 & 98章練習/index.html
+++ b/15.第97 & 98章練習/index.html
@@ -9,49 +9,28 @@
     <title>Document</title>
 </head>
 
-<body id=body>
-    <div class="wrap">
-        <div class="header">
+<body>
+    <header>
+        <div class="content">
             <p>screenX : <span id="screenXId"> </span> screenY : <span id="screenYId"></span></p>
             <p>pageX : <span id="pageXId"> </span> pageY : <span id="pageYId"></span></p>
             <p>clientX : <span id="clientXId"> </span> clientY : <span id="clientYId"></span></p>
         </div>
-        <img src="./img/cool.png" id="imgId">
-    </div>
+    </header>
+    <img src="./img/cool.png" id="imgId">
 </body>
 
 </html>
 <script>
-    // 先偵測整個body
-    // 讓img能跟著滑鼠移動,前提事要把img固定在body上
-    // 把數值輸入到空格裡
-    // client 視窗    page整個瀏覽器（可以往下捲）  screen整個螢幕
-    // const all = document.body;
-    // const img = document.querySelector("#imgId");
-    // all.addEventListener("mousemove", mouseAll, false);
-    // function mouseAll(e) {
-    //     console.log(e.clientX);
-    //     img.style.top = e.clientX + "px";
-    //     img.style.left = e.clientY + "px";
-    // }
-    var screenX = document.querySelector("#screenXId");
-    var screenY = document.querySelector("#screenYId");
-    var pageX = document.querySelector("#pageXId");
-    var pageY = document.querySelector("#pageYId");
-    var clientX = document.querySelector("#clientXId");
-    var clientY = document.querySelector("#clientYId");
-    var imgMove = document.querySelector("#imgId");
-
+    // 先把背景css做出來
+    // 要監聽整個body的mouse effect
+    // 圖片固定在背景上,圖片才知道在client上的哪個位置,沒有固定他就只是罩著文檔流的排版方式排,固定是為了與背景和 mouse做連結
+    // 讓圖片跟著client一起動
+    const img = document.querySelector("#imgId");
+    const bodyMouse = document.body;
+    bodyMouse.addEventListener("mousemove", mouse, false);
     function mouse(e) {
-        screenX.textContent = e.screenX;
-        screenY.textContent = e.screenY;
-        pageX.textContent = e.pageX;
-        pageY.textContent = e.pageY;
-        clientX.textContent = e.clientX;
-        clientY.textContent = e.clientY;
-        imgMove.style.left = e.clientX + "px";
-        imgMove.style.top = e.clientY + "px";
-    };
-    var el = document.body;
-    el.addEventListener("mousemove", mouse, false);
+        img.style.left = e.clientX + "px";
+        img.style.top = e.clientY + "px";
+    } 
 </script>
