update array with data-num /dataset

--- a/17.第101~108章練習/index.html
+++ b/17.第101~108章練習/index.html
@@ -32,6 +32,14 @@
         <p>點到第幾個農場：<em class="farmNumber"></em></p>
         <p>有幾隻狗：<em class="dogs"></em></p>
     </div>
+    <div class="four">
+            <h1>(四)Arry 與 data-num/dataset</h1>
+            <h2>原始資料（farm）</h2>
+            <ul id="ul2"></ul>
+            <h2>請點選上面的農場名稱,印出點到的農場資訊</h2>
+            <ul id="ulClick"></ul>
+    </div>
+
     <script src="./all.js"></script>
 </body>
 
