--- a/17.第101~108章練習/index.html
+++ b/17.第101~108章練習/index.html
@@ -39,6 +39,16 @@
             <h2>請點選上面的農場名稱,印出點到的農場資訊</h2>
             <ul id="ulClick"></ul>
     </div>
+    <div class="five">
+        <h1>(四)splice</h1>
+        <p>帶入農場資訊</p>
+        <ul></ul>
+    </div>
+    <div class="six">
+        <h2>(五)作業(輸入可印出，也可點刪除)</h2>
+        <input type="text" id="text">
+        <button type="button" id="button" >點擊,儲存到localStorage</button>
+    </div>
 
     <script src="./all.js"></script>
 </body>
