--- a/17.第101~108章練習/index.html
+++ b/17.第101~108章練習/index.html
@@ -37,11 +37,12 @@
             <h2>原始資料（farm）</h2>
             <ul id="ul2"></ul>
             <h2>請點選上面的農場名稱,印出點到的農場資訊</h2>
+            <p>這邊的方法與JS-practice1不同,如果不懂可以看JS-practice1的第一次練習,這邊是JS-practice2</p>
             <ul id="ulClick"></ul>
     </div>
     <div class="five">
-        <h1>(四)splice</h1>
-        <p>帶入農場資訊</p>
+        <h1>(五)splice</h1>
+        <p>帶入農場資訊,點擊到的刪除</p>
         <ul></ul>
     </div>
     <div class="six">
@@ -49,8 +50,7 @@
         <input type="text" id="text">
         <button type="button" id="button" >點擊,儲存到localStorage</button>
     </div>
-
-    <script src="./all.js"></script>
+    <script src="./all2.js"></script>
 </body>
 
 </html>
