update BOM(browser object model)

--- a/17.第101~108章練習/index.html
+++ b/17.第101~108章練習/index.html
@@ -54,6 +54,12 @@
         <ul>
         </ul>
     </div>
+    <div class="seven">
+        <h2>test</h2>
+        <input type="text" id=inputTextSeven>
+        <button id="sevenBtn">點擊</button>
+        <ul></ul>    
+    </div>
     <script src="./all3.js"></script>
 </body>
 
