--- a/19.第122~134章練習/index.html
+++ b/19.第122~134章練習/index.html
@@ -10,10 +10,13 @@
     <h2>（一）假裝後端的資料 JSON 格式 </h2>
     <p class="p1"></p>
     <!-- 是否有真實的拿到資料 200 404 -->
-    <h2>(二)是否有拿到資料查詢（status）</h2>
-    <p>印出有拿到資料 : <em id="emCatchData"></em></p>
-    <p>印出沒有拿到資料 : <em id="emNoCatchData"></em></p>
+    <h2>(二)是否有拿到資料查詢xhr的編碼（status）</h2>
+    <p>印出有拿到資料的編碼 : <em id="emCatchData"></em></p>
+    <p>印出沒有拿到資料的貶馬: <em id="emNoCatchData"></em></p>
    <button id="btn">too</button>
+   <h2>(三)是否有順利拿到資料判斷編碼,印出資料（status）</h2>
+   <p>判斷,有順利拿到資料,印出資料 :<em id="emDataYes"></em> </p>
+   <p>判斷,有順利拿到資料,印出資料 :<em id="emDataNo"></em> </p>
     <script src="./all.js"></script>
 </body>
 </html>
